...
            snackbarHostState.showSnackbar(it)
            watchListViewModel.clearSnackbarMessage()
        }
    }

    Box(modifier = Modifier.fillMaxSize()) {
        LazyColumn(modifier = modifier.testTag("DetailBodyContent")) {
            // Item 1: Konten Utama (Genre, Title, Overview, Action Buttons, Cast & Crew, Movie Info, Reviews)
            item {
                Card(modifier = Modifier.fillMaxWidth()) {
                    Column(
                        modifier = Modifier
                            .fillMaxWidth()
...
                                style = MaterialTheme.typography.titleLarge,
                                fontWeight = FontWeight.Bold,
                            )
                            IconButton(onClick = onDiscoverActor) {
                                Icon(
                                    imageVector = Icons.AutoMirrored.Filled.ArrowForwardIos,
                                    contentDescription = "More Cast & Crew"
                                )
                            }
                        }
                        LazyRow(
                            modifier = Modifier.testTag("ActorLazyRow")
                        ) {
                            items(movieDetail.cast) { cast ->
                                ActorItem(
                                    cast = cast,
                                    modifier = Modifier
                                        .weight(1f)
...
        Text(
            text = "More like this",
            style = MaterialTheme.typography.titleLarge,
            fontWeight = FontWeight.Bold,
        )
        LazyRow(
            modifier = Modifier.testTag("MoreLikeThisLazyRow")
        ) {
            item {
                AnimatedVisibility(visible = isMovieLoading) {
                    CircularProgressIndicator()
                }
            }
...
            }
        }
    }
}

private enum class ActionIcon(val icon: ImageVector, val contentDescription: String) {
    Favorite(icon = Icons.Default.Favorite, contentDescription = "Favorite_3"),
    Watchlist(icon = Icons.Default.AddToQueue, contentDescription = "Watchlist_3"),
    Share(icon = Icons.Default.Share, contentDescription = "Share"),
}

private fun generateMovieLink(movieId: Int, posterPath: String): String {
    val baseUrl = K.BASE_URL
    return "https://www.themoviedb.org/movie/$movieId"
...
