...
            visible = !state.value.isLoading && state.value.error == null
        ) {
            state.value.movieDetail?.let { movieDetail ->
                LazyColumn(
                    modifier = Modifier
                        .fillMaxSize()
                        .testTag("CastCrewScreen")
                ) {
                    items(movieDetail.cast.chunked(2)) { castPair ->
                        Row(modifier = Modifier.fillMaxWidth()) {
                            castPair.forEach { cast ->
                                ActorItemList(
                                    cast = cast,
...
        IconButton(
            onClick = onNavigateUp,
            modifier = Modifier.align(Alignment.TopStart)
        ) {
            Icon(
                imageVector = Icons.AutoMirrored.Default.ArrowBack,
                contentDescription = "Back"
            )
        }
    }
    LoadingView(isLoading = state.value.isLoading)
}
