...
                        .fillMaxSize()
                        .padding(horizontal = 16.dp),
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    IconButton(
                        onClick = onBackClick,
                        modifier = Modifier.testTag("Navigate up")
                    ) {
                        @Suppress("DEPRECATION")
                        Icon(
                            imageVector = Icons.Default.ArrowBack,
                            contentDescription = "Navigate up",
                            tint = MaterialTheme.colorScheme.onPrimary
...
                }
            }


            LazyColumn(modifier = modifier
                .fillMaxSize()
                .testTag("Movie LazyColumn")) {
                items(movies.chunked(2)) { moviePair ->
                    Row(modifier = Modifier.fillMaxWidth()) {
                        moviePair.forEach { movie ->
                            MovieCoverImageList(
                                movie = movie,
                                onMovieClick = onMovieClick,
...
